--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "mobx": "^6.9.0",
+    "mobx-react": "^7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "typescript": "^5.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +43,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+   "devDependencies": {
+    "@types/css-modules": "^1.0.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.2"
   }
 }
